recursion.lessons.recursion.tree.Tree.scala.error
Tree:8: error: not found: value subTree
	subTree()
        ^Tree:13: error: not found: value subTree
	subTree()
        ^