recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
if (steps==0){
}else {
	current(steps)
	avance(length)
	droite(angle)
	subTree()
	tree(steps-1,length*shrink,angle,shrink)
	gauche(90)
	gauche(90)
	tree(steps-1,length*shrink,angle,shrink)
	subTree()
	
}
}
